@@ -1,3 +1,7 @@
+2008-09-25  Ollie Wild  <aaw@google.com>
+
+	* doc/invoke.texi (fltrans-output-list): Document new option.
+
 2008-09-25  Doug Kwan  <dougkwan@google.com>
 	    Ollie Wild  <aaw@google.com>
 
