@@ -1,3 +1,8 @@
+2008-09-25  Ollie Wild  <aaw@google.com>
+
+	* lang.opt (fltrans-output-list=): New option.
+	* lto.c (lto_execute_ltrans): Output file names to ltrans_output_list.
+
 2008-09-25 Rafael Espindola  <espindola@google.com>
 
 	* lto.c (lto_resolution_read): Initialize ret;
